# idea_generator

./: draft_idea.md  idea.md  main.py  pyproject.toml  summary_of_idea.md  workflow_report.md
agents/: business_model_generator_agent.py  market_research_agent.py  niche_opportunity_scanner_agent.py  pain_point_discovery_agent.py  user_persona_analysis_agent.py  validate_ideas_agent.py
graph/: state.py  workflow.py
niche_opportunities/Italia/transportation/: niche_opportunities.json
otput/: separated_workflow_report.md
output/: business_model_output_1.json  business_model_output_10.json  business_model_output_11.json  business_model_output_2.json  business_model_output_3.json  business_model_output_4.json  business_model_output_5.json  business_model_output_6.json  business_model_output_7.json  business_model_output_8.json  business_model_output_9.json  workflow_output_2025-09-22_16-35-16.json
pain_points/Italia/transportation/: pain_points.json
singles_agent_approach_2/: niche_opportunity_2_scanner_agent.py
tools/: content_extraction_tool.py  google_search_trend_tool.py  opena_alex_tool.py  product_hunt_tool.py  reddit_scrapper_tool.py  serper_search_tool.py  twitter_search_tool.py
utils/: parser.py
